# LaserScanning-Microscope

./: .gitignore  .gitmodules  CLAUDE.md  claude_code.ps1  laser_scanning_app.py  main.py  pyproject.toml
data/: 260420_170628_mcl_andor_hyperspec_scan.h5  overview.ipynb
log/: ScopeFoundry_log_260403_171912.txt  ScopeFoundry_log_260403_171943.txt  ScopeFoundry_log_260403_172519.txt  ScopeFoundry_log_260403_173150.txt  ScopeFoundry_log_260403_180725.txt  ScopeFoundry_log_260403_181005.txt  ScopeFoundry_log_260403_183344.txt  laser_scanning_app_log_260403_183945.txt  laser_scanning_app_log_260403_184456.txt  laser_scanning_app_log_260408_162957.txt  laser_scanning_app_log_260408_164018.txt  laser_scanning_app_log_260408_165742.txt  laser_scanning_app_log_260408_165831.txt  laser_scanning_app_log_260408_165847.txt  laser_scanning_app_log_260408_170227.txt  laser_scanning_app_log_260408_171335.txt  laser_scanning_app_log_260408_172437.txt  laser_scanning_app_log_260408_172537.txt  laser_scanning_app_log_260408_173732.txt  laser_scanning_app_log_260409_123619.txt  laser_scanning_app_log_260409_123914.txt  laser_scanning_app_log_260409_123932.txt  laser_scanning_app_log_260409_124043.txt  laser_scanning_app_log_260409_124211.txt  laser_scanning_app_log_260409_125405.txt  laser_scanning_app_log_260409_125741.txt  laser_scanning_app_log_260409_130159.txt  laser_scanning_app_log_260409_130653.txt  laser_scanning_app_log_260409_130827.txt  laser_scanning_app_log_260409_131123.txt  laser_scanning_app_log_260409_131943.txt  laser_scanning_app_log_260409_132613.txt  (+41 more)
(+12 files in other folders)
