[project]
name = "laserscanning-microscope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.0",
    "h5py>=3.16.0",
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pipython>=2.11.0.6",
    "pydaqmx>=1.4.7",
    "pyqt6>=6.11.0",
    "pyqtgraph>=0.14.0",
    "pyserial>=3.5",
    "pyvisa>=1.16.2",
    "qtconsole>=5.7.2",
    "qtpy>=2.4.3",
]
